fix: report: icon vertical align in project link

--- a/assets/styles/report.css
+++ b/assets/styles/report.css
@@ -25,6 +25,10 @@
   background-color: #000;
 }
 
+#report #projectLink .ui.header {
+  display: inline;
+}
+
 #report #projectLink .ui.header > .icon {
   font-size: 1em;
   vertical-align: initial;
